tests/neg-custom-args/noimports-additional.scala

class annotation extends Annotation
val s: String = "str" // error
val regex: Regex = new Regex("str")